Fix wrapping issue and final price on restaurant orders page

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -11,6 +11,10 @@ body {
     position: fixed;
     width: 100%;
 
+    //ADDED Z INDEX - IM
+    z-index:2;
+
+
     nav {
       background-color: brown;
       font-family: 'Roboto', sans-serif;
@@ -219,8 +223,6 @@ body {
   margin: 10px;
 
   .sms-post {
-    //background-color: transparent;
-    //border: none;
     outline: none;
     font-family: inherit;
     width: 100%;
@@ -239,4 +241,9 @@ body {
 .new-order-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.restaurant-body {
+  z-index: -1;
 }
